# fast-danksharding

./: .gitignore  .gitmodules  Cargo.toml  README.md
cuda/appUtils/msm/: msm.cu  msm.cuh
cuda/appUtils/ntt/: ntt.cuh
cuda/appUtils/vector_manipulation/: ve_mod_mult.cu  ve_mod_mult.cuh
cuda/curves/: bn254.cuh
cuda/primitives/: base_curve.cuh
fast-danksharding/: Cargo.toml  build.rs
fast-danksharding/src/: fast_danksharding.rs  lib.rs  main.rs  matrix.rs  utils.rs
fast-danksharding/src/cuda/: lib.cu
kzg_data_availability/: fk20_single.py  kzg_proofs.py  tests.py
kzg_data_availability/blst/: blst.py
test_vectors/32x512/: B0.csv  B1.csv  C.csv  C0.csv  C2.csv  C_rows.csv  D_both.csv  D_cols.csv  D_in.csv  D_rows.csv  E0.csv  E1.csv  E2.csv  K.csv  K0.csv  K1.csv  P.csv  S.csv  SRS.csv  d1.csv  delta0.csv  delta1.csv  q.csv  roots_u.csv  roots_w.csv
wrapper/: lib.cu
wrapper/icicle-utils/: Cargo.toml
wrapper/icicle-utils/src/: fast_danksharding.rs  field.rs  lib.rs  main.rs
