[package]
name = "fast-danksharding"
version = "0.1.0"
edition = "2021"
authors = [ "Ingonyama " ]
description = "Ingonyama implementation of danksharding based on icicle library"
homepage = "https://www.ingonyama.com"
repository = "https://github.com/ingonyama-zk/fast-danksharding"

[dependencies] 
# icicle-utils = { git = "https://github.com/ingonyama-zk/icicle.git" }
icicle-utils = { path="../icicle" }
hex="0.4.3"
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-ec = { version = "0.3.0", features = [ "parallel" ] }
ark-bls12-381 = { version = "0.3.0", optional = true }
nvtx = { version="1.1.1", optional = true }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
rand="0.8.5"

[features]
default = ["bls12_381"]
bls12_381 = ["icicle-utils/bls12_381", "ark-bls12-381/curve"]

[profile.dev]
opt-level = 0
debug = false
codegen-units = 256
